[tool.poetry]
name = "aerleon-hp-comware"
version = "0.1.0"
description = "Aerleon Generator for the HP switches running the Comware OS."
authors = ["Rob Ankeny <ankenyr@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "aerleon_hp_comware"}]

[tool.poetry.dependencies]
python = "^3.7"
aerleon = {path = "../aerleon"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
coverage = "^6.4.4"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0.post0"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
